Fixed alignment using flexbox

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  /* border: 1px solid red; */
+  padding: 8px 8px;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
 }
 
 .profile-image {
@@ -20,6 +25,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  /* border: 1px solid red; */
 }
 
 .logo {
@@ -27,6 +33,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* border: 1px solid red; */
 }
 
 button {
@@ -35,6 +42,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  /* border: 1px solid red; */
 }
 
 a {
@@ -45,4 +53,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 16px;
+  /* border: 1px solid red; */
+}
+
+.left-of-header, .right-of-header {
+  display: flex;
+  /* border: 1px solid green; */
+  gap: 16px;
+  align-items: center;
 }
